# genericsuite-basecamp

./: .env.example  .gitignore  AGENTS-1st-attempt.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  Makefile  README.md  mkdocs.yml  requirements.txt
.claude/: settings.json
ai_docs/: activeContext.md  codeStyle.md  directoryStructure.md  keyEnvVars.md  productContext.md  projectBrief.md  security.md
docs/: docs_manifest.json  genericsuite-ai.md  genericsuite-core.md  history.md  index.md  privacy-policy.md  repositories.md
docs/Backend-Development/: deployment.md  index.md
docs/Configuration-Guide/: CrudEditorConfigInterface.py  (+4 more)
docs/Sample-Code/exampleapp/apps/api-chalice/: .dockerignore  .env.example  .gitignore  .gitmodules.example  Dockerfile  Makefile  Pipfile  README.md  app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
docs/Sample-Code/exampleapp/apps/api-chalice/.chalice/: config-example.json
docs/Sample-Code/exampleapp/apps/api-chalice/chalicelib/endpoints/: ai_exampleapp_bot.py  fda_food_endpoint.py  food_moments.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/config/: config.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/models/admin_food/: food_moments.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/models/ai_chatbot/: ai_gpt_fn_app.py  ai_gpt_fn_fda.py  ai_gpt_fn_index.py  ai_gpt_fn_index_app.py  ai_gpt_fn_tables.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/models/external_apis/: fda_food_api.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/models/users_data/: users_data.py
docs/Sample-Code/exampleapp/apps/api-chalice/lib/models/utilities/: food_utilities.py
docs/Sample-Code/exampleapp/apps/api-chalice/scripts/: run_server.sh  run_server_prod.sh
docs/Sample-Code/exampleapp/apps/api-chalice/scripts/aws_big_lambda/: template-sam.yml
docs/Sample-Code/exampleapp/apps/api-chalice/tests/: .env.for_test  conftest.py  pytest.ini  test_900_users.py  test_ai_010_chatbot_webpage_analizer.py  test_ai_050_chatbot_daily_meals.py
docs/Sample-Code/exampleapp/apps/api-fastapi/: .env.example  .gitignore  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/Sample-Code/exampleapp/apps/api-fastapi/lib/: main.py
docs/Sample-Code/exampleapp/apps/api-fastapi/lib/models/ai_chatbot/: ai_gpt_fn_app.py  ai_gpt_fn_fda.py  ai_gpt_fn_index.py
docs/Sample-Code/exampleapp/apps/api-fastapi/lib/models/external_apis/: fda_food_endpoint.py
docs/Sample-Code/exampleapp/apps/api-fastapi/lib/models/utilities/: food_utilities.py
docs/Sample-Code/exampleapp/apps/api-fastapi/lib/routers/: ai_assistant.py  fda_food_endpoint.py
docs/Sample-Code/exampleapp/apps/api-fastapi/scripts/aws_big_lambda/: template-sam.yml
docs/Sample-Code/exampleapp/apps/api-fastapi/scripts/aws_ec2_elb/: template-cf-ec2-elb.yml
docs/Sample-Code/exampleapp/apps/api-flask/: .env.example  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/Sample-Code/exampleapp/apps/api-flask/lib/: index.py
docs/Sample-Code/exampleapp/apps/api-flask/lib/routers/: ai_assistant.py  fda_food_endpoint.py  food_moments.py
docs/Sample-Code/exampleapp/apps/api-flask/lib/tools/: age_utilities.py  convertion_utilities.py  transform_utilities.py
docs/Sample-Code/exampleapp/apps/api-flask/scripts/aws_dynamodb/: cf-template-dynamodb.yml
docs/Sample-Code/exampleapp/apps/mcp-server/: .env.example  LICENSE  Makefile  Pipfile  README.md  claude_desktop_config.json  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_mcp_server.sh  vscode_mcp_config.json
docs/Sample-Code/fastapitemplate/server/: .env.example  .gitmodules.example  Makefile  fastapitemplate-backend_openapi.json  fastapitemplate-backend_openapi.yaml  package.json  pyproject.toml  requirements.txt
docs/Sample-Code/fastapitemplate/server/lib/: main.py  mcp_server.py
docs/Sample-Code/fastapitemplate/server/lib/models/ai_chatbot/: ai_gpt_fn_app.py
docs/Sample-Code/fastapitemplate/server/lib/models/gen_params/: parameters.py
docs/Sample-Code/fastapitemplate/server/lib/routers/: parameters.py
docs/code/exampleapp/apps/api-chalice/: .dockerignore  .env.example  .gitignore  Makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
docs/code/exampleapp/apps/api-chalice/.chalice/: dynamodb_cf_template.yaml
docs/code/exampleapp/apps/api-chalice/tests/: test_030_food_moments.py  test_ai_010_common.py  test_ai_020_chatbot_and_fda.py  test_ai_040_chatbot_dishes.py  test_menu_options.py
docs/code/exampleapp/apps/api-flask/: .env.example  LICENSE  Makefile  Pipfile  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/code/exampleapp/apps/api-flask/lib/: index.py
docs/code/exampleapp/apps/api-flask/lib/routers/: fda_food_endpoint.py  food_moments.py
docs/code/exampleapp/apps/mcp-server/: .env.example  Makefile  Pipfile  README.md  claude_desktop_config.json  mcp_server.py  package.json  pyproject.toml  requirements.txt  vscode_mcp_config.json
docs/code/fastapitemplate/server/: .env.example  LICENSE  Makefile  README.md  fastapitemplate-backend_openapi.json  fastapitemplate-backend_openapi.yaml  package.json  pyproject.toml
docs/code/fastapitemplate/server/lib/config/: config.py
docs/code/fastapitemplate/server/lib/models/ai_chatbot/: ai_gpt_fn_index.py
docs/code/fastapitemplate/server/lib/models/gen_params/: parameters.py
docs/code/fastapitemplate/server/lib/models/utilities/: actions_utilities.py
docs/code/fastapitemplate/server/lib/routers/: ai_assistant.py
docs/code/fastapitemplate/server/scripts/aws/: update_additional_envvars.sh
docs/code/fastapitemplate/server/scripts/aws_big_lambda/: template-sam.yml
scripts/: docs_prepare.py  mkdocs_install.sh  mkdocs_run.sh  mkdocs_transfer_site.sh  new-project-from-template.sh  rename-app.sh  run_docs_prepare.sh  sample_code_prepare.sh
specs/: activeContext.md  directoryStructure.md  productContext.md  projectBrief.md  systemPatterns.md  techContext.md
(+398 files in other folders)
