[project]
name = "server"
version = "1.0.0"
description = "fastapitemplate (FastAPI/MCP backend)"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.121.3",
    "fastapi-cors>=0.0.6",
    "genericsuite>=0.2.0",
    "genericsuite-ai>=0.2.0",
    "mangum>=0.19.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.41.0",
    "coverage>=7.12.0",
    "pytest>=9.0.1",
]
