[project]
name = "api-fastapi"
version = "1.0.0"
description = "ExampleApp backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "fastapi-cors>=0.0.6",
    "genericsuite>=0.2.0",
    "genericsuite-ai>=0.2.0",
    "mangum>=0.19.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.40.4",
    "coverage>=7.11.2",
    "pytest>=9.0.0",
]
