[project]
name = "mcp-server"
version = "1.0.0"
description = "ExampleApp MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "genericsuite>=0.2.0",
    "genericsuite-ai>=0.2.0",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.40.4",
    "coverage>=7.11.2",
    "pytest>=9.0.0",
]
