[project]
name = "mcp-server"
version = "1.0.0"
description = "ExampleApp MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.12",
    "fastmcp>=2.13.1",
    "genericsuite>=0.2.0",
    "genericsuite-ai>=0.2.0",
    "mcp>=1.21.2",
    "pymongo>=4.15.5",
]

[dependency-groups]
dev = [
    "cfn-lint>=1.40.4",
    "coverage>=7.11.2",
    "pytest>=9.0.0",
]

[tool.uv.sources]
genericsuite-ai = { git = "https://github.com/tomkat-cr/genericsuite-be-ai", rev = "develop" }
genericsuite = { git = "https://github.com/tomkat-cr/genericsuite-be", rev = "develop" }
